[package]
name = "spl-memo-compressed"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_memo_compressed"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
spl-memo = { version = "4.0.0", features = ["no-entrypoint"] }
solana-program = "1.17"
